<resources>
    <string name="app_name">mobile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_main">BaladeSmourbif</string>
    <string name="title_message">Message</string>
    <string name="title_map">Carte</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profil</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ajout_balade">ajout balade</string>
    <string name="recherche">Recherche</string>
    <string name="zoom_on_your_location">Zoom on your location</string>
    <string name="cr_ez_votre_balade">Créez votre balade</string>
    <string name="intituler_de_votre_balade">intituler de votre balade</string>
    <string name="adresse">Adresse</string>
    <string name="description">description</string>
    <string name="site_web">site web</string>
    <string name="difficulte">difficulté de 1 à 5</string>
    <string name="horaires">horaires</string>
    <string name="ajouter_une_image">ajouter une image</string>
    <string name="score">score de 1 à 5</string>
    <string name="profil">profil</string>
    <string name="name">name</string>
    <string name="race">race</string>
    <string name="ajouter_chien">ajouter chien</string>
    <string name="ajout_d_un_nouveau_chien">Ajout d\'un nouveau chien</string>
    <string name="nom_du_chien">Nom du chien</string>
    <string name="race_du_chien">Race du chien</string>
    <string name="supprimer_un_chien">supprimer un chien</string>
    <string name="mise_jours_du_chien">mise à jours du chien</string>
    <string name="se_rendre_sur_le_lieu_de_la_balade">se rendre sur le lieu de la balade</string>
    <string name="nom_de_la_balade">nom de la balade</string>
    <string name="adresseDetail">adresse</string>
    <string name="web">detail ride</string>
    <string name="horaire">detail ride</string>
    <string name="difficulter">detail ride</string>
    <string name="website">Site Web</string>
    <string name="schedule">Horaires</string>
    <string name="difficulty">Difficulté</string>
</resources>