<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.addride.AddRideActivity"
            android:orientation="vertical">

            <TextView
                android:id="@+id/add_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:gravity="center"
                android:text="@string/cr_ez_votre_balade"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/name_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="#8FBDB4D1"
                android:drawablePadding="20dp"
                android:hint="@string/intituler_de_votre_balade"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/place_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#8FBDB4D1"
                android:drawablePadding="20dp"
                android:hint="@string/adresse"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                />
            <EditText
                android:id="@+id/description_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#8FBDB4D1"
                android:drawablePadding="20dp"
                android:hint="@string/description"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/website_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#8FBDB4D1"
                android:drawablePadding="20dp"
                android:hint="@string/site_web"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/difficulty_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#8FBDB4D1"
                android:drawablePadding="20dp"
                android:hint="@string/difficulte"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                />

            <EditText
                android:id="@+id/schedule_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#8FBDB4D1"
                android:drawablePadding="20dp"
                android:hint="@string/horaires"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                />


            <EditText
                android:id="@+id/score_ride"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:background="#8FBDB4D1"
                android:drawablePadding="20dp"
                android:hint="@string/score"
                android:padding="20dp"
                android:textColor="@color/black"
                android:textColorHint="@color/white"
                />


        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_ride_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/zoom_on_your_location"
        android:minWidth="32dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_add_pin" />
</RelativeLayout>