<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gestionDog.UpdateDogActivity"
    android:background="#8FBDB4D1">

    <TextView
        android:id="@+id/update_dog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="91dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="91dp"
        android:gravity="center"
        android:text="@string/mise_jours_du_chien"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_nameDog"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="155dp"
        android:drawablePadding="20dp"
        android:hint="@string/nom_du_chien"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_dog" />

    <EditText
        android:id="@+id/ed_raceDog"
        android:layout_width="261dp"
        android:layout_height="53dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="155dp"
        android:drawablePadding="20dp"
        android:hint="@string/race_du_chien"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_nameDog" />

    <EditText
        android:id="@+id/ed_dateOfBirth"
        android:layout_width="266dp"
        android:layout_height="43dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="155dp"
        android:drawablePadding="20dp"
        android:hint="Sa date de naissance"
        android:textColor="@color/black"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_raceDog" />

    <Button
        android:id="@+id/btnUpdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="155dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="155dp"
        android:layout_marginBottom="194dp"
        android:text="Ajouter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_dateOfBirth" />


</androidx.constraintlayout.widget.ConstraintLayout>